[package]
name = "saturday_fun"
version = "0.1.0"
authors = ["ɭยเร ςคг๔๏ร๏ <luis@luiscardoso.dev>"] # the wizard 🧙‍♂️
edition = "2021" 


[dependencies]

# Profile setup https://doc.rust-lang.org/cargo/reference/profiles.html
# TL;DR: optimises for code gen size and strip out unnecessary assembly instructions
[profile.release]
panic = "abort"
lto = true # invokes the dark magic from LLVM's to link time optimizations (LTO)
codegen-units=1 # optimise code gen size
opt-level="s" # optimise for binary size